// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarControls component Should match snapshot when passing in title prop 1`] = `
<div>
  <div
    class="APMCalendarControls-container"
  >
    <span
      class="APMCalendarControls-title"
    >
      Lectins
    </span>
    <div>
      <button
        class="APMCalendarControls-button"
        data-testid="left-button"
        type="button"
      >
        <i
          class="APMCalendarControls-button-icon far fa-angle-left"
        />
      </button>
      <button
        class="APMCalendarControls-button"
        data-testid="right-button"
        type="button"
      >
        <i
          class="APMCalendarControls-button-icon far fa-angle-right"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`CalendarControls component Should match snapshot with base props 1`] = `
<div>
  <div
    class="APMCalendarControls-container"
  >
    <span
      class="APMCalendarControls-title"
    >
      Broccoli
    </span>
    <div>
      <button
        class="APMCalendarControls-button"
        data-testid="left-button"
        type="button"
      >
        <i
          class="APMCalendarControls-button-icon far fa-angle-left"
        />
      </button>
      <button
        class="APMCalendarControls-button"
        data-testid="right-button"
        type="button"
      >
        <i
          class="APMCalendarControls-button-icon far fa-angle-right"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`CalendarControls component Should match snapshot with className prop 1`] = `
<div>
  <div
    class=" APMCalendarControls-container coconut-oil-container"
  >
    <span
      class=" APMCalendarControls-title coconut-oil-title"
    >
      Broccoli
    </span>
    <div>
      <button
        class=" APMCalendarControls-button coconut-oil-button"
        data-testid="left-button"
        type="button"
      >
        <i
          class=" APMCalendarControls-button-icon coconut-oil-button-icon far fa-angle-left"
        />
      </button>
      <button
        class=" APMCalendarControls-button coconut-oil-button"
        data-testid="right-button"
        type="button"
      >
        <i
          class=" APMCalendarControls-button-icon coconut-oil-button-icon far fa-angle-right"
        />
      </button>
    </div>
  </div>
</div>
`;
